Replace Java 11 API